<resources>
    <string name="app_name">JavaWeather</string>
    <string name="temperature_26">26°C</string>
    <string name="weather_sunny">Sunny</string>
    <string name="address_nz">New Zealand</string>
    <string name="date_0623">06-23</string>
    <string name="time_0300">03:00</string>
    <string name="description_image">An image</string>
    <string name="description_image_button">An imageButton</string>
    <string name="feels_24">24°C</string>
    <string name="humidity_63">63%</string>
    <string name="feels_textField">Feels</string>
    <string name="temperature_textField">Temperature</string>
    <string name="humidity_textField">Humidity</string>
    <string name="description_weather">overcast clouds</string>
    <string name="address_loading">Loading</string>
    <string name="weather_null"></string>
    <string name="temperature_null"></string>
    <string name="date_null"></string>
</resources>